# hamming-rs

./: Cargo.toml  README.md
src/: bitvec.rs  block.rs  blocks.rs  cli.rs  main.rs
src/lib/: bitvec.rs  block.rs  blocks.rs  lib.rs
