[package]
name = "hamming"
version = "0.1.0"
authors = ["Tiemen Waterreus <tiemen@tiemenwaterreus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hamming"
path = "src/lib/lib.rs"

[[bin]]
name = "hamming"
path = "src/main.rs"

[dependencies]
rand = "0.7"
clap = "2.33.3"
anyhow = "1.0"
base64 = "0.13.0"
